--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -137,8 +137,6 @@
                             android:src="@drawable/profile_calendar"/>
 
                         <TextView
-                            android:text="mon."
-                            tools:text="merc."
                             app:layout_constraintTop_toTopOf="parent"
                             android:textColor="@android:color/white"
                             android:fontFamily="sans-serif-light"
@@ -150,9 +148,9 @@
                             android:layout_height="wrap_content"/>
 
                         <TextView
+                            android:id="@+id/profile_day_number_calendar"
                             android:fontFamily="sans-serif-light"
                             android:textColor="@color/colorText"
-                            android:text="12"
                             android:textSize="12sp"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toBottomOf="@id/profile_day_name_calendar"
