--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".view.profileFlow.Settings"
+    tools:context=".view.profileFlow.settingsDirectory.Settings"
     android:background="#F5F5F5">
 
     <LinearLayout
