--- a/app/src/main/res/navigation/navigation_graph_tab_profile.xml
+++ b/app/src/main/res/navigation/navigation_graph_tab_profile.xml
@@ -68,6 +68,7 @@
         android:label="fragment_follow_page"
         tools:layout="@layout/fragment_follow_page" />
     <fragment
+        android:name="com.timenoteco.timenote.view.profileFlow.menuDirectory.Menu"
         android:id="@+id/menu"
         android:label="fragment_menu"
         tools:layout="@layout/fragment_menu" >
