--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -16,7 +16,7 @@
     <androidx.cardview.widget.CardView
         app:cardElevation="0dp"
         android:id="@+id/signup_cv"
-        app:cardBackgroundColor="#90FFFFFF"
+        app:cardBackgroundColor="#60000000"
         app:cardCornerRadius="10dp"
         android:background="@android:color/holo_red_dark"
         android:layout_marginHorizontal="24dp"
@@ -66,7 +66,7 @@
                 android:layout_marginTop="12dp"
                 android:layout_marginHorizontal="16dp"
                 android:textSize="14sp"
-                android:text="Email"
+                android:text="Email / Identifiant"
                 android:id="@+id/email_label"
                 android:textColor="@color/white"
                 app:layout_constraintTop_toBottomOf="@id/signup_signup_info"
@@ -79,9 +79,40 @@
                 android:backgroundTint="@color/white"
                 android:layout_marginHorizontal="12dp"
                 android:hint="Email"
+                android:textColorHint="#60FFFFFF"
                 android:id="@+id/signup_mail"
+                android:textColor="@android:color/white"
                 android:textSize="14sp"
                 app:layout_constraintTop_toBottomOf="@id/email_label"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:visibility="gone"
+                android:fontFamily="sans-serif-light"
+                android:layout_marginTop="12dp"
+                android:layout_marginHorizontal="16dp"
+                android:textSize="14sp"
+                android:text="Email / Identifiant"
+                android:id="@+id/identifiant_label"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toBottomOf="@id/signup_mail"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <EditText
+                android:visibility="gone"
+                android:fontFamily="sans-serif-light"
+                android:backgroundTint="@color/white"
+                android:textColor="@android:color/white"
+                android:layout_marginHorizontal="12dp"
+                android:hint="Email"
+                android:id="@+id/signup_identitfiant"
+                android:textColorHint="#60FFFFFF"
+                android:textSize="14sp"
+                app:layout_constraintTop_toBottomOf="@id/identifiant_label"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
@@ -95,7 +126,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginHorizontal="16dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/signup_mail"
+                app:layout_constraintTop_toBottomOf="@id/signup_identitfiant"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
@@ -105,6 +136,8 @@
                 android:layout_marginHorizontal="12dp"
                 android:hint="Password"
                 android:textSize="14sp"
+                android:textColorHint="#60FFFFFF"
+                android:textColor="@android:color/white"
                 android:id="@+id/signup_password"
                 app:layout_constraintTop_toBottomOf="@id/signup_password_label"
                 app:layout_constraintStart_toStartOf="parent"
@@ -172,23 +205,25 @@
 
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:fontFamily="sans-serif-light"
-        android:id="@+id/signup_as_guest"
-        android:shadowDy="1"
-        android:shadowDx="1"
-        android:shadowRadius="1.5"
-        android:shadowColor="@android:color/black"
-        android:textAllCaps="true"
-        android:layout_marginHorizontal="16dp"
-        android:text="Or enter as a guest"
-        android:layout_marginTop="12dp"
-        android:textSize="12sp"
-        android:textColor="@color/white"
+    <mehdi.sakout.fancybuttons.FancyButton
+        android:id="@+id/guest_btn"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signup_cv"
-        android:layout_width="wrap_content"
+        fancy:fb_defaultColor="@android:color/transparent"
+        fancy:fb_borderWidth="2dp"
+        fancy:fb_borderColor="@color/white"
+        fancy:fb_radius="90dp"
+        fancy:fb_text="ENTER AS A GUEST"
+        android:layout_marginTop="16dp"
+        fancy:fb_textColor="@color/white"
+        android:paddingVertical="10dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginHorizontal="24dp"
+        android:background="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:layout_gravity="center"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
