--- a/app/src/main/res/layout/fragment_preview_timenote_created.xml
+++ b/app/src/main/res/layout/fragment_preview_timenote_created.xml
@@ -73,7 +73,7 @@
         android:id="@+id/preview_created_timenote_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingEnd="4dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:shadowColor="@android:color/black"
@@ -86,7 +86,6 @@
         app:layout_constraintBottom_toBottomOf="@id/separator_1"
         app:layout_constraintEnd_toStartOf="@id/separator_1"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="@id/preview_created_timenote_vp"
         app:layout_constraintTop_toTopOf="@id/separator_1" />
 
     <TextView
@@ -96,9 +95,9 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/custom"
         android:fontFamily="sans-serif-light"
-        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_vp"
-        app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_day_month"
-        app:layout_constraintStart_toEndOf="@id/preview_created_timenote_year" />
+        app:layout_constraintStart_toStartOf="@id/preview_created_timenote_vp"
+        android:layout_marginStart="160dp"
+        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_vp" />
 
     <TextView
         android:id="@+id/preview_created_timenote_day_month"
@@ -111,7 +110,6 @@
         android:shadowDy="1"
         android:shadowRadius="1.5"
         android:text=" 10 Aug. \n 15:30 "
-        android:paddingHorizontal="4dp"
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
@@ -126,15 +124,15 @@
         android:layout_marginBottom="8dp"
         android:background="@drawable/custom"
         android:fontFamily="sans-serif-light"
-        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_vp"
-        app:layout_constraintEnd_toStartOf="@id/preview_created_timenote_time"
-        app:layout_constraintStart_toEndOf="@id/preview_created_timenote_day_month" />
+        android:layout_marginEnd="160dp"
+        app:layout_constraintEnd_toEndOf="@id/preview_created_timenote_vp"
+        app:layout_constraintBottom_toBottomOf="@id/preview_created_timenote_vp"/>
 
     <TextView
         android:id="@+id/preview_created_timenote_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingStart="4dp"
+        android:layout_marginStart="8dp"
         android:fontFamily="sans-serif-light"
         android:gravity="center"
         android:shadowColor="@android:color/black"
@@ -145,7 +143,6 @@
         android:textColor="@android:color/white"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="@id/separator_2"
-        app:layout_constraintEnd_toEndOf="@id/preview_created_timenote_vp"
         app:layout_constraintStart_toEndOf="@id/separator_2"
         app:layout_constraintTop_toTopOf="@id/separator_2" />
     <TextView
