--- a/app/src/main/res/layout/fragment_timenote_address.xml
+++ b/app/src/main/res/layout/fragment_timenote_address.xml
@@ -25,12 +25,22 @@
 
     </LinearLayout>
 
+    <fragment
+        android:id="@+id/map_timenote"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/timenote_address_ll"
+        tools:context=".MapsFragment" />
+
     <androidx.recyclerview.widget.RecyclerView
         tools:listitem="@layout/item_timenote"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timenote_address_ll"
+        app:layout_constraintTop_toBottomOf="@id/map_timenote"
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
 
